# ur-ikev2-library

./: .gitignore  .replit  CMakeLists.txt  config.json  ikev2_client.conf  index.html  replit.md  setup.sh
attached_assets/: Pasted--Set-up-project-for-building-and-running-with-essential-configurations-using-libopenikev2-source-c-1753451192726_1753451192738.txt
libopenikev2/: CMakeLists.txt  config.h.in  configure
libopenikev2/autom4te.cache/: output.0  traces.0  traces.1
pkg_src/libopenikev2/: aclocal.m4  libopenikev2Config.cmake.in
pkg_src/libopenikev2/autom4te.cache/: output.2  requests
pkg_src/src/: config_manager.cpp  main.cpp  session_manager.cpp  state_monitor.cpp
src/: config_manager.cpp  config_manager.hpp  http_server.cpp  http_server.hpp  integration_layer.cpp  integration_layer.hpp  main.cpp  session_manager.cpp  session_manager.hpp  state_monitor.hpp
